--- a/submissions/iamsokol/friends-app/main.css
+++ b/submissions/iamsokol/friends-app/main.css
@@ -41,6 +41,7 @@ label:focus{
     bottom: 0;
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
     background: rgba(255, 255, 255, 0.42);
     padding: 25px;
     background: -moz-linear-gradient(left, rgb(162,126,208) 0%, rgb(221,182,247) 100%);
@@ -99,7 +100,9 @@ label:focus{
 .radio-input:checked + .radio-label .radio-title{
     color: #fff;
 }
-
+.menu-button{
+    display: none;
+}
 .friends {
     display: flex;
     flex-wrap: wrap;
@@ -188,4 +191,141 @@ label:focus{
 }
 .result.show{
     display: block;
+}
+@media screen and (max-width: 1250px){
+    .item {
+        width: 450px;
+    }
+}
+@media screen and (max-width: 1020px){
+    .item {
+        width: 565px;
+    }
+    .drop {
+        margin-top: 10px;
+    }
+}
+@media screen and (max-width: 600px){
+    .item {
+        display: block;
+        width: 300px;
+        margin: 0 0 20px;
+    }
+    .image {
+        margin-right: 0;
+    }
+    .info {
+        width: 100%;
+        text-align: center;
+    }
+    .description {
+        font-size: 14px;
+    }
+    .filter{
+        padding: 10px;
+        display: none;
+    }
+    .open + .filter{
+        display: block;
+    }
+    .sortage {
+        justify-content: center;
+    }
+    .header, .filter{
+        position: relative;
+        text-align: center;
+    }
+    .filtername {
+        padding: 10px;
+        width: 300px;
+    }
+    .filter > div {
+        margin-bottom: 20px;
+    }
+    .drop {
+        margin-top: 0;
+    }
+    .main {
+        padding: 20px;
+    }
+    .menu-button{
+        display: block;
+    }
+    .menu-button {
+        position: absolute;
+        top: 16px;
+        left: 20px;
+        z-index: 4;
+        margin: 0;
+        width: 30px;
+        height: 45px;
+        -webkit-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+        -webkit-transition: .5s ease-in-out;
+        -moz-transition: .5s ease-in-out;
+        -o-transition: .5s ease-in-out;
+        transition: .5s ease-in-out;
+        cursor: pointer;
+    }
+
+    .menu-button span {
+        display: block;
+        position: absolute;
+        height: 2px;
+        width: 100%;
+        background: #000000;
+        opacity: 1;
+        left: 0;
+        -webkit-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+        -webkit-transition: .25s ease-in-out;
+        -moz-transition: .25s ease-in-out;
+        -o-transition: .25s ease-in-out;
+        transition: .25s ease-in-out;
+    }
+    .menu-button span:nth-child(1) {
+        top: 0px;
+        -webkit-transform-origin: left center;
+        -moz-transform-origin: left center;
+        -o-transform-origin: left center;
+        transform-origin: left center;
+    }
+    .menu-button span:nth-child(2) {
+        top: 10px;
+        -webkit-transform-origin: left center;
+        -moz-transform-origin: left center;
+        -o-transform-origin: left center;
+        transform-origin: left center;
+    }
+    .menu-button span:nth-child(3) {
+        top: 20px;
+        -webkit-transform-origin: left center;
+        -moz-transform-origin: left center;
+        -o-transform-origin: left center;
+        transform-origin: left center;
+    }
+    .menu-button.open span:nth-child(1) {
+        -webkit-transform: rotate(45deg);
+        -moz-transform: rotate(45deg);
+        -o-transform: rotate(45deg);
+        transform: rotate(45deg);
+        top: -1px;
+        left: 4px;
+    }
+    .menu-button.open span:nth-child(2) {
+        width: 0%;
+        opacity: 0;
+    }
+    .menu-button.open span:nth-child(3) {
+        -webkit-transform: rotate(-45deg);
+        -moz-transform: rotate(-45deg);
+        -o-transform: rotate(-45deg);
+        transform: rotate(-45deg);
+        top: 21px;
+        left: 4px;
+    }
 }
