--- a/submissions/vadymkotlyarenko/js-dom/main.css
+++ b/submissions/vadymkotlyarenko/js-dom/main.css
@@ -3,12 +3,12 @@ body{
     color: aliceblue;
     font-size: 16px;
 }
-header{
+.header{
     text-align: center;
     display: block;
     font-size: 26px;
 }
-section{
+.mainContent{
     flex-direction: row;
     display: flex;
 }
@@ -76,7 +76,7 @@ section{
     #contentImg{
         display: none;
     }
-    section{
+    .mainContent{
         flex-direction: column;
     }    
     .menu {
