--- a/submissions/vadymkotlyarenko/js-dom/main.css
+++ b/submissions/vadymkotlyarenko/js-dom/main.css
@@ -3,12 +3,12 @@ body{
     color: aliceblue;
     font-size: 16px;
 }
-.header{
+header{
     text-align: center;
     display: block;
     font-size: 26px;
 }
-.mainContent{
+section{
     flex-direction: row;
     display: flex;
 }
@@ -76,7 +76,7 @@ body{
     #contentImg{
         display: none;
     }
-    .mainContent{
+    section{
         flex-direction: column;
     }    
     .menu {
