--- a/submissions/CrazyPike/DOM#6/style.css
+++ b/submissions/CrazyPike/DOM#6/style.css
@@ -1,22 +1,28 @@
-body{
+.flex{
     display:flex;
 }
-#menu{
+.menu{
     width: 30%;
     display: flex;
     flex-direction: column;
-
+    list-style-type: none;
 }
-#main{
+.menu > ul{
+    list-style-type: none;
+    margin-left: 0px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-left: 20px;
+}
+.content{
     width: 70%;
     border: 1px solid lightgrey;
     border-left: none;
     background-color: rgba(231,231,231,0.6);
 }
 .itemMenu{
-    border-top: 1px solid lightgrey;
-    border-left: 1px solid lightgrey;
-    border-right: 1px solid lightgrey;
+    border: 1px solid lightgrey;
+    border-bottom: none;
     height: 40px;
     padding-left: 20px;
     padding-bottom: auto;
