--- a/submissions/olek557/friends-app-task/style.css
+++ b/submissions/olek557/friends-app-task/style.css
@@ -149,7 +149,6 @@ body * {
   background-color: rgba(0, 0, 0, .3);
   width: 120px;
   height: 15px;
-  /*margin-top: 2px;*/
 }
 
 .wrapper {
@@ -258,13 +257,7 @@ body * {
 .user__name {
   font-size: 14px;
   font-weight: 800;
-}
-
-.user__name,
-.user__email,
-.user__phone,
-.user__birthday,
-.user__address {
+  text-transform: capitalize;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -324,9 +317,7 @@ body * {
   text-align: center;
   margin-bottom: 20px;
   margin-top: 50px;
-}
-.modal__body {
-  
+  text-transform: capitalize;
 }
 
 .modal__footer {
