--- a/submissions/krash1408/friends-app/css/style.css
+++ b/submissions/krash1408/friends-app/css/style.css
@@ -36,8 +36,7 @@ body {
     z-index: 2;
 }
 .main-logo {
-    width: 25%;
-    min-width: 18.5rem;
+    width: 25rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -49,10 +48,12 @@ body {
     line-height: 5rem;
     font-weight: bold;
     color: rgb(255, 255, 255);
+    text-decoration: none;
     text-shadow: 0 0 .5rem rgba(255, 255, 255, 0.788);
     transition: background-color .5s;
 }
-.main-logo:hover {
+.main-logo:hover,
+.main-logo:focus {
     background-color: rgba(255, 255, 255, 0.925);
     color: rgba(65, 166, 255, 0.856);
     cursor: pointer;
@@ -60,46 +61,53 @@ body {
 
 /* поле сортировки */
 .sort {
-    cursor: pointer;
+    width: 5rem;
     min-width: 5rem;
+    height: 5rem;
     min-height: 5rem;
+    cursor: pointer;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
-.sort:hover {
+.sort:hover,
+.sort:focus {
     filter: drop-shadow(0 0 .4rem #4c4cff);
 }
 .hidden:checked + .sort {
     filter: drop-shadow(0 0 .4rem #0000ff);
 }
+.male {
+    background-image: url('../img/mars-solid.svg');
+}
+.female {
+    background-image: url('../img/venus-solid.svg');
+}
 .name-az {
-    width: 5rem;
-    height: 5rem;
-    background-image: url('img/sort-alpha-down-solid.svg');
-    background-repeat: no-repeat;
+    background-image: url('../img/sort-alpha-down-solid.svg');
 }
 .name-za {
-    width: 5rem;
-    height: 5rem;
-    background-image: url('img/sort-alpha-up-solid.svg');
-    background-repeat: no-repeat;
+    background-image: url('../img/sort-alpha-up-solid.svg');
 }
 .age-az {
-    width: 5rem;
-    height: 5rem;
-    background-image: url('img/sort-numeric-up-solid.svg');
-    background-repeat: no-repeat;
+    background-image: url('../img/sort-numeric-up-solid.svg');
 }
 .age-za {
-    width: 5rem;
-    height: 5rem;
-    background-image: url('img/sort-numeric-down-solid.svg');
-    background-repeat: no-repeat;
+    background-image: url('../img/sort-numeric-down-solid.svg');
 }
 #search {
     background-color: rgb(255, 255, 255);
     border: none;
     font-size: 2rem;
+    font-weight: bold;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    overflow: hidden;
     color: rgba(85, 85, 92, 0.781);
     outline: none;
+}
+#search:hover,
+#search:focus {
+    box-shadow: inset .1rem .1rem .3rem rgb(0, 0, 0);
 }
 #reset {
     border: none;
@@ -112,7 +120,8 @@ body {
     font-weight: bold;
     transition: all .5s;
 }
-#reset:hover {
+#reset:hover,
+#reset:focus {
     background-color:rgb(255, 255, 255);
     color: rgba(65, 166, 255, 0.856);
     text-shadow: 0 0 .5rem rgba(0, 68, 255, 0.788);
@@ -136,18 +145,58 @@ body {
 }
 /* карточки */
 .card {
-    border-radius: .3rem;
+    position: relative;
     min-width: 15rem;
-    max-width: 17rem;
+    max-width: 21rem;
     height: 22rem;
     margin: .5rem;
+    flex: 1 1 auto;
+    perspective: 100rem;
+}
+.card__wrapper {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    will-change: transform;
+    transition: transform .5s;
+    transform: rotateY(0deg);
+    transform-style: preserve-3d;
+}
+.card:hover .card__wrapper {
+    transform: rotateY(180deg);
+    box-shadow: inset 0 0 1rem rgba(0, 0, 0, 0.288);
+}
+.card__front,
+.card__back {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    
+    border-radius: .3rem;
+    background-color: rgb(116, 134, 150);
+    box-shadow: 0 0 .5rem rgba(0, 0, 0, 0.466);
     display: flex;
     flex-flow: column;
-    flex: 1 1 14rem;
-    justify-content: flex-start;
     align-items: center;
-    background-color: rgba(116, 134, 150, 0.699);
-    box-shadow: 0 0 .5rem rgba(0, 0, 0, 0.466);
+    justify-content: center;
+}
+.card__front {
+    z-index: 2;
+    backface-visibility: hidden;
+
+}
+.card__back {
+    transform: rotateY(180deg);
+    backface-visibility: hidden;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    text-align: center;
+    padding: 0.5rem auto;
 }
 .card__photo {
     width: 14rem;
@@ -171,11 +220,20 @@ body {
     text-shadow: 0 0 .3rem rgb(255, 255, 255);
 }
 .card:hover {
-    box-shadow: inset 0 0 1rem rgba(0, 0, 0, 0.288);
     cursor: pointer;
 }
 .card:hover .card__photo {
     filter: grayscale(0%);
+}
+.card__birthday,
+.card__email,
+.card__id {
+    margin: .2rem;
+}
+.card__email {
+    word-break: break-all;
+    white-space: pre-wrap;
+    width: 90%;
 }
 /* футер */
 .main-footer {
