--- a/submissions/CrazyPike/memory-game#11/style/styles.css
+++ b/submissions/CrazyPike/memory-game#11/style/styles.css
@@ -1,6 +1,6 @@
 #container {
-    width: 320px;
-    height: 320px;
+    width: 340px;
+    height: 340px;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -12,10 +12,12 @@
     width: 78px;
     height:78px;
     border: solid 1px greenyellow;
+    margin: 2px;
+    background-position: left;
 
 }
 img {
-    height: 50px;
+    width: 50px;
 
 }
 .card > img{
