--- a/submissions/patrofimov/friends-app/css/style.css
+++ b/submissions/patrofimov/friends-app/css/style.css
@@ -101,6 +101,7 @@ body {
     padding: 10px;
     text-align: center;
     display: inline-block;
+	width: 200px;
     margin-right: 20px;
     margin-bottom: 20px;
     -webkit-box-shadow: inset 0px 1px 20px 0px rgba(150,129,150,1);
