--- a/submissions/patrofimov/friends-app/css/style.css
+++ b/submissions/patrofimov/friends-app/css/style.css
@@ -24,9 +24,12 @@ body {
 
 .logo {
     display: inline;
-    font-size: -webkit-xxx-large;
+    font-size: 2rem;
     text-decoration: none;
 	text-transform: uppercase;
+	font-weight: bold;
+	white-space: nowrap;
+	letter-spacing: 0.3em;
 }
 
 .form {
@@ -35,7 +38,7 @@ body {
 
 .search {
 	font-size: 100%;
-	width: 20rem;
+	width: 13rem;
 	background:antiquewhite;
 }
 
@@ -47,7 +50,7 @@ body {
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     background: #fff;
     box-shadow: 0 2px 0 0 #f5f5f5;
     padding: 1.5rem 0;
@@ -101,9 +104,11 @@ body {
     padding: 10px;
     text-align: center;
     display: inline-block;
-	width: 200px;
-    margin-right: 20px;
-    margin-bottom: 20px;
+	width: 158px;
+    height: 246px;
+	margin-right: 1em;
+    margin-bottom: 1em;
+	font-size: .8rem;
     -webkit-box-shadow: inset 0px 1px 20px 0px rgba(150,129,150,1);
     -moz-box-shadow: inset 0px 1px 20px 0px rgba(150,129,150,1);
     box-shadow: inset 0px 1px 20px 0px rgba(150,129,150,1);
@@ -111,13 +116,11 @@ body {
 
 .person__photo{
     border-radius: 50%;
-    width: 10rem;
-    height: 10rem;
-    margin-bottom: 0.8rem;
+    margin-bottom: 0.3rem;
  }
  
 .person__description{
-    margin-bottom: 10px;
+    margin-bottom: 8px;
 }
 .person__description:last-child{
     margin-bottom: 0px;
