--- a/submissions/feroxes/google-popup/style.css
+++ b/submissions/feroxes/google-popup/style.css
@@ -1,9 +1,10 @@
-header {
+.header {
     display: flex;
     justify-content: flex-end;
     width: 100%;
     height: 70px;
     position: relative;
+    color: #000;
 }
 
 .menu {
@@ -26,16 +27,20 @@ header {
     text-decoration: underline;
 }
 
-#dots_label {
+.dots_label {
     width: 20px;
     height: 20px;
     background: url("img/google_sprite.png") no-repeat;
     background-position: -132px -42px;
     background-size: 510px;
     cursor: pointer;
+    position: absolute;
+    z-index: 999;
+    top: 25px;
+    right: 140px;
 }
 
-#dots_label:hover {
+.dots_label:hover {
     background: url("img/google_sprite.png") no-repeat;
     background-position: -132px -42px;
     background-size: 510px;
@@ -190,18 +195,18 @@ header {
     cursor: pointer;
 }
 
-#more, #dots, .hidden {
+.more_input, .dots_input, .hidden {
     display: none;
 }
 
-#dots:checked ~ .google_services {
+.dots_input:checked ~ .google_services {
     display: flex;
 }
 
-#more:checked ~ #more-icons {
+.more_input:checked ~ .more-icons {
     display: none;
 }
 
-#more:checked ~ .hidden {
+.more_input:checked ~ .hidden {
     display: flex;
 }
