--- a/submissions/Vitaminvp/html-css-popup/src/src/style/style.scss
+++ b/submissions/Vitaminvp/html-css-popup/src/src/style/style.scss
@@ -5,10 +5,10 @@
   justify-content: flex-end;
   align-items: center;
   margin: 20px 20px 0 0;
-  & li{
+  .nav__list{
     margin-left: 20px;
   }
-  &__bell{
+  .nav__bell{
     color: $font-color;
     display: block;
     margin-top: 2px;
@@ -22,7 +22,7 @@
       opacity: 0.8;
     }
   }
-  &__auth{
+  .nav__auth{
     display: block;
     width: 32px;
     height: 32px;
@@ -34,10 +34,10 @@
       content: url(../assets/img/photo.png);
     }
     &:hover {
-      opacity: .8;
+      opacity: 0.8;
     }
   }
-  &__link{
+  .nav__link{
     color: $font-color;
     text-decoration: none;
     margin: 0 5px 0 0;
@@ -48,7 +48,7 @@
       text-decoration: underline;
     }
   }
-  &__menu{
+  .nav__menu{
     display: none;
     position: absolute;
     top: 50px;
@@ -73,7 +73,6 @@
     animation-fill-mode: none;
     animation-play-state: running;
     &_rect{
-      content: "";
       border-color: transparent;
       border-bottom-color: #fff;
       border-style: dashed dashed solid;
@@ -95,7 +94,8 @@
     &_listsMore{
       display: none;
     }
-    & li{
+    & .nav__menu_list,
+    & .nav__input_listMore{
       margin: 1px;
       border-radius: 2px;
       border: 1px solid transparent;
@@ -104,9 +104,10 @@
       color: black;
       height: 98px;
       width: 81px;
-      & a{
+      & .nav__menu_link,
+      & .nav__input_linkMore{
         text-decoration: none;
-        color: rgba(0,0,0,0.87);
+        color: rgba(0,0,0, 0.87);
         border: 1px solid transparent;
         display: block;
         @include transition;
@@ -119,12 +120,13 @@
         }
       }
       &:hover{
-        & a{
-          border: 1px solid rgba(0,0,0,.2);
+        & .nav__menu_link,
+        & .nav__input_linkMore{
+          border: 1px solid rgba(0,0,0, 0.2);
         }
         & .nav__menu_title {
           z-index: 3;
-          background: rgba(255,255,255,.9);
+          background: rgba(255,255,255, 0.9);
           white-space: normal;
           overflow-wrap: break-word;
           word-wrap: break-word;
