--- a/submissions/Vitaminvp/html-css-popup/src/src/style/style.scss
+++ b/submissions/Vitaminvp/html-css-popup/src/src/style/style.scss
@@ -212,12 +212,18 @@
       width: 4.9em;
       text-overflow: ellipsis;
     }
-    &_input{
+    &_input {
       width: 0;
       height: 0;
-      opacity: 0;
       position: absolute;
-      top: 200vh;
+      top: -100vh;
+      &:after {
+        content: "";
+        width: 311px;
+        height: 31px;
+        position: absolute;
+        bottom: calc(-100vh - 490px);
+      }
       & ~ label{
         text-align: center;
         display: block;
@@ -226,6 +232,11 @@
         background-color: $bg-color;
       }
       &:checked{
+        &:after {
+          width: 290px;
+          height: 2px;
+          bottom: calc(-100vh - 455px);
+        }
         & ~ label{
           height: 2px;
           width: 80%;
@@ -272,9 +283,16 @@
   &__input{
     width: 0;
     height: 0;
-    opacity: 0;
     position: absolute;
-    top: 200vh;
+    top: -100vh;
+    &:after {
+      position: absolute;
+      width: 22px;
+      height: 22px;
+      content: "";
+      top: calc(100vh + 2px);
+      left: -12px;
+    }
     &_icons{
       top: -1px;
       padding: 0;
