--- a/submissions/Zihfred/google pop-up/style.css
+++ b/submissions/Zihfred/google pop-up/style.css
@@ -43,7 +43,6 @@
     align-items: center;
 }
 .pop-up {
-
     display: none;
     position: absolute;
     width: 332px;;
@@ -63,7 +62,6 @@
     position: relative;
 }
 .pop-up:before {
-
     background-color: white;
     display: inline-block;
     position: relative;
@@ -77,7 +75,6 @@
     border-left: 1px solid rgba(0,0,0,.2);
     border-top: 1px solid rgba(0,0,0,.2);
 }
-
 a {
     color: inherit;
     text-decoration: none;
@@ -86,7 +83,6 @@ a {
     display: none;
     opacity: 0;
 }
-
 .wrapper:active .content {
     display: block;
 }
@@ -117,7 +113,6 @@ a {
 }
 .pop-up-item__img{
     width: 40px;
-
 }
 input[type='checkbox']{
     display: none;
@@ -133,13 +128,9 @@ input[type='checkbox']{
 input:checked ~ .pop-up{
     display: block;
 }
-
-
-
 input:checked ~ .close{
     display: block;
 }
-
 input:checked ~ .pop-up-more{
     opacity: 0;
     display: none;
@@ -148,10 +139,9 @@ input:checked ~ .fullsize{
     display: block;
     opacity: 1;
 }
-
-
-.close{display: none}
-
+.close{
+    display: none
+}
 .fullsizepop-up{
     display: none;
     text-align: center;
