--- a/submissions/nazmariam/google-page/app/sass/main.scss
+++ b/submissions/nazmariam/google-page/app/sass/main.scss
@@ -1,23 +1,26 @@
 @import url('reset.scss');
 @import url('search.scss');
+$google_color: rgba(0,0,0,.87);
 body{
   font-family: arial, sans-serif;
   font-size: 13px;
 }
-ul#menu{
+.main-menu{
   position: absolute;
   top: 8px;
   margin: 8px;
-  color: rgba(0,0,0,.87);
+  color: $google_color;
   right: 0;
   align-items: center;
   display: flex;
-  >li{
+  .menu-item >.submenu-link:hover{
+    text-decoration: underline;
+  }
+  >.menu-item{
     float:left;
     list-style-type:none;
     margin: 0 10px;
-    &:nth-last-child(2) {
-      a{
+    .notification{
         background: #000000de url(../images/sprite.png) 23px 865px;
         width: 20px;
         height: 20px;
@@ -28,9 +31,8 @@ ul#menu{
           opacity: 1;
         }
       }
-    }
-    &:nth-last-child(1) {
-      a{
+
+    .img-profile{
         background: url("../images/avatar.jpg");
         background-size: contain;
         display: block;
@@ -38,21 +40,18 @@ ul#menu{
         width: 32px;
         height: 32px;
       }
-    }
 
-    a{
+    .submenu-link{
       text-decoration: none;
-      color: rgba(0,0,0,0.87);
-        &:hover{
-        text-decoration: underline;
-      }
+      color: $google_color;
+
       &:visited{
         color: inherit;
       }
     }
   }
 }
-label{
+.popup-label{
   .button-icon{
     position: relative;
     display: block;
@@ -83,16 +82,16 @@ label{
   padding: 0;
   overflow: hidden;
   border: 0;
-  clip: rect(1px,1px,1px,1px);
+  clip: rect(0,0,0,0);
 }
 
 .button-popup:checked ~ .wrapper {
   display: block;
 }
-.button-popup:focus ~ label .button-icon {
+.button-popup:focus ~ .popup-label .button-icon {
   outline: 2px solid #4d90fe;
 }
-.button-popup:checked + label > .close-mask {
+.button-popup:checked + .popup-label > .close-mask {
   display: block;
 }
 .wrapper{
@@ -100,9 +99,6 @@ label{
   background: #fff;
   right: 8px;
   top: 44px;
-  -webkit-animation: gb__a .2s;
-  animation: gb__a .2s;
-  -webkit-border-radius: 2px;
   width: 320px;
   border: 1px solid #ccc;
   box-shadow: 0 0 10px #ccc;
@@ -122,7 +118,7 @@ label{
     transform: rotate(-45deg);
   }
 }
-ul.submenu{
+.submenu{
   list-style-type: none;
   overflow: overlay;
   position: relative;
@@ -132,7 +128,7 @@ ul.submenu{
   align-items: center;
   justify-content: center;
   max-height: 455px;
-  li {
+  .submenu-item {
     display: block;
     &:nth-child(1) a{
       width: 64px;
@@ -145,40 +141,40 @@ ul.submenu{
         margin: 5px 0 9px;
       }
     }
-    &:nth-child(2) a:before{
+    &:nth-child(2) .submenu-link:before{
       background: url(../images/sprite.png) 92px 936px;
     }
-    &:nth-child(3) a:before{
+    &:nth-child(3) .submenu-link:before{
       background: url(../images/sprite.png) 71px 1594px;
     }
-    &:nth-child(4) a:before{
+    &:nth-child(4) .submenu-link:before{
       background: url(../images/sprite.png) 66px 519px;
     }
-    &:nth-child(5) a:before{
+    &:nth-child(5) .submenu-link:before{
       background: url(../images/sprite.png) 92px 2497px;
     }
-    &:nth-child(6) a:before{
+    &:nth-child(6) .submenu-link:before{
       background: url(../images/sprite.png) 92px 105px;
     }
-    &:nth-child(7) a:before{
+    &:nth-child(7) .submenu-link:before{
       background: url(../images/sprite.png) 92px 1247px;
     }
-    &:nth-child(8) a:before{
+    &:nth-child(8) .submenu-link:before{
       background: url(../images/sprite.png) 92px 2322px;
     }
-    &:nth-child(9) a:before{
+    &:nth-child(9) .submenu-link:before{
       background: url(../images/sprite.png) 92px 2668px;
     }
-    &:nth-child(10) a:before{
+    &:nth-child(10) .submenu-link:before{
       background: url(../images/sprite.png) 92px 2426px;
     }
-    &:nth-child(11) a:before{
+    &:nth-child(11) .submenu-link:before{
       background: url(../images/sprite.png) 90px 660px;
     }
-    &:nth-child(12) a:before{
+    &:nth-child(12) .submenu-link:before{
       background: url(../images/sprite.png) 92px 1388px;
     }
-    a{
+    .submenu-link{
       display:flex;
       flex-direction: column;
       align-items: center;
@@ -193,7 +189,7 @@ ul.submenu{
         content: "";
       }
     }
-    &:hover a{
+    &:hover .submenu-link{
       border: 1px solid #e5e5e5;
       -webkit-border-radius: 2px;
       border-radius: 2px;
@@ -205,14 +201,17 @@ ul.submenu{
     background: #f5f5f5;
     padding: 12px 0;
     text-align: center;
-    color: rgba(0,0,0,0.87);
+    color: $google_color;
     opacity: 1;
+    cursor: pointer;
   }
-
+  .show-more:hover{
+    background: #e0dede;
+  }
   .button-more:checked ~ .hidden-icons{
     display: flex;
   }
-  .button-more:checked ~ span{
+  .button-more:checked ~ .borderline{
     border-top: 1px solid rgba(0,0,0,.2);
     display: block;
     width:80%;
@@ -230,33 +229,33 @@ ul.submenu{
     display: none;
     flex-wrap: wrap;
     padding: 0 16px;
-    a{
+    .submenu-link{
       padding: 12px;
     }
-    li{
-      &:nth-child(1) a:before{
+    .submenu-item{
+      &:nth-child(1) .submenu-link:before{
         background: url(../images/sprite.png) 92px 2116px;
         border-radius: unset;
         width: 64px;
         height: 64px;
         margin: auto;
       }
-      &:nth-child(2) a:before {
+      &:nth-child(2) .submenu-link:before {
         background: url(../images/sprite.png) 76px 1664px;
       }
-      &:nth-child(3) a:before {
+      &:nth-child(3) .submenu-link:before {
         background: url(../images/sprite.png) 92px 2740px;
       }
-      &:nth-child(4) a:before {
+      &:nth-child(4) .submenu-link:before {
         background: url(../images/sprite.png) 92px 1317px;
       }
-      &:nth-child(5) a:before {
+      &:nth-child(5) .submenu-link:before {
         background: url(../images/sprite.png) 92px 1005px;
       }
-      &:nth-child(6) a:before {
+      &:nth-child(6) .submenu-link:before {
         background: url(../images/sprite.png) 92px 2185px;
       }
-      &:nth-child(7) a:before {
+      &:nth-child(7) .submenu-link:before {
         background: url(../images/sprite.png) 92px 447px;
       }
     }
